{
    "name": "CameraControle",
    "maps": [
        {
            "name": "FPSCamera",
            "id": "cf6846de-7ec2-4951-ba70-237497eedd12",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "Value",
                    "id": "881c1def-0d15-43e4-8c9c-0f1693629f19",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseY",
                    "type": "Value",
                    "id": "f45b9fc0-6ed3-4f8d-b10e-6451439087bf",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d1ca792c-0670-4daf-a60d-ff0be5833601",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "630e0cfc-1696-4cb8-bd79-4cf90c48fc76",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}